--- a/Pages/Movies/Index.cshtml
+++ b/Pages/Movies/Index.cshtml
@@ -13,6 +13,9 @@
 
 <form>
     <p>
+        <select asp-formaction="MovieGenre" asp-asp-items="Model.Genres">
+            <option value="">All</option>
+        </select>
         <label>Title: <input type="text" asp-for="SearchString" /></label>
         <input type="submit" value="Filter" />
     </p>
